copy and form changes

--- a/index.html
+++ b/index.html
@@ -90,17 +90,17 @@
 						<h2 class="no-bottom-space">TALK TO US</h2>
 						<ul>
 							<li>
-								<label for="FirstName">First Name</label>
+								<label for="FirstName">First Name <span class="orange-text">*</span></label>
 								<input class="required" type="text" name="FirstName" />
 								<div class="clearfix"></div>
 							</li>
 							<li>
-								<label for="LastName">Last Name</label>
+								<label for="LastName">Last Name <span class="orange-text">*</span></label>
 								<input class="required" type="text" name="LastName" />
 								<div class="clearfix"></div>
 							</li>
 							<li>
-								<label for="Email">Email Address</label>
+								<label for="Email">Email Address <span class="orange-text">*</span></label>
 								<input class="required" type="email" name="Email" />
 								<div class="clearfix"></div>
 							</li>
@@ -110,7 +110,7 @@
 								<div class="clearfix"></div>
 							</li>
 							<li>
-								<label for="Website">Website</label>
+								<label for="Website">Website <span class="orange-text">*</span></label>
 								<input class="required" type="url" value="http://" name="Website" />
 								<div class="clearfix"></div>
 							</li>
@@ -120,7 +120,7 @@
 
 				<div class="column fourty last">
 					<div class="padding">
-						<label for="text" class="textarea">How can we help you?</label>
+						<label for="text" class="textarea">How can we help you? <span class="orange-text">*</span></label>
 						<textarea class="required" name="Contact_Form_Message__c"></textarea>
 						<div class="textright">
 							<input type="submit" class="button orange" value="SEND" />
@@ -161,7 +161,7 @@
 			</div>
 		</div><!-- /block -->
 		<div class="clients">
-			<span class="str">CURRENT CLIENTS</span>
+			<span class="str">TRUSTED BY</span>
 			<ul>
 				<li>
 					<span><div class="image kixeye"></div></span>
@@ -201,7 +201,6 @@
 					<li><a href="#support">SUPPORT<span class="ico ico-5">&nbsp;</span></a></li>
 					<li><a href="#pricing">PRICING<span class="ico ico-6">&nbsp;</span></a></li>
 				</ul>
-				<a href="#popup-test" class="fancybox btn-speedreport">get the speed report</a>
 				<a href="#" class="btn-chat" onclick="return startWidget('chat');">chat online</a>
 				<p class="sidebar-phone textcenter"><strong>or give us a call at:<br/></strong><span class="phone-number">+1 (877) 629-2361</span>
 			</aside>
@@ -365,6 +364,8 @@
 		<article class="content" id="pricing">
 			<strong class="large-heading orange">Pricing</strong>
 			<h2 class="heading">One World. One Rate.</h2>
+			<p class="no-bottom-space">Just one, no matter where in the world. We charge based on bandwidth.<br/>We don't charge for requests. We also don't charge additional fees for SSL traffic.</p>
+
 			<div class="data">
 				<table>
 					<thead>
@@ -449,13 +450,13 @@
 						<input name="URL_of_Lead_Source__c" type='hidden' value="https://enterprise.maxcdn.com/" />
 
 						<div class="trial-form custom-form">
-							<label>Email Address</label>
+							<label>Email Address <span class="orange-text">*</span></label>
 							<input class="text required" type="email" name="Email" >
 							<label>Phone Number (optional)</label>
 							<input class="text " type="text" name="Phone" >
-							<label>URL of a file (2mb or under)</label>
-							<input class="text required" type="text" name="Website" placeholder="http://your-company.com/file.pdf">
-							<label>Your Monthly Bandwidth Usage</label>
+							<label>Your Website <span class="orange-text">*</span></label>
+							<input class="text required" type="text" name="Website" placeholder="http://your-company.com">
+							<label>Your Monthly Bandwidth Usage <span class="orange-text">*</span></label>
 							<select class="required" name="NetDNA_Usage_Selection__c" tabindex="6">
 								<option value="Select Bandwidth" selected="selected">Select Bandwidth</option>
 								<option value="Under 5TB">Under 5TB</option>
@@ -580,17 +581,17 @@
 				<div class="cols">
 					<div class="col">
 						<div class="trial-form custom-form">
-							<label>First Name</label>
+							<label>First Name <span class="orange-text">*</span></label>
 							<input class="text required" type="text" name="FirstName" >
-							<label>Last Name</label>
+							<label>Last Name <span class="orange-text">*</span></label>
 							<input class="text required" type="text" name="LastName" >
-							<label>Email Address</label>
+							<label>Email Address <span class="orange-text">*</span></label>
 							<input class="text required" type="email" name="Email" >
-							<label>Phone Number</label>
+							<label>Phone Number <span class="orange-text">*</span></label>
 							<input class="text required" type="text" name="Phone" >
-							<label>URL</label>
+							<label>URL <span class="orange-text">*</span></label>
 							<input class="text required" type="text" name="Website" value="http://" data-value="http://" >
-							<label>Your Monthly Bandwidth Usage</label>
+							<label>Your Monthly Bandwidth Usage <span class="orange-text">*</span></label>
 							<select class="required" name="NetDNA_Usage_Selection__c" tabindex="6">
 								<option value="Select Bandwidth" selected="selected">Select Bandwidth</option>
 								<option value="Under 5TB">Under 5TB</option>
@@ -640,13 +641,13 @@
 				<div class="cols">
 					<div class="col">
 						<div class="trial-form custom-form">
-							<label>Email Address</label>
+							<label>Email Address <span class="orange-text">*</span></label>
 							<input class="text required" type="email" name="Email" >
 							<label>Phone Number (optional)</label>
 							<input class="text " type="text" name="Phone" >
-							<label>URL of a file (2mb or under)</label>
+							<label>URL of a file (2mb or under) <span class="orange-text">*</span></label>
 							<input class="text required" type="text" name="Website" placeholder="http://your-company.com/file.pdf">
-							<label>Your Monthly Bandwidth Usage</label>
+							<label>Your Monthly Bandwidth Usage <span class="orange-text">*</span></label>
 							<select class="required" name="NetDNA_Usage_Selection__c" tabindex="6">
 								<option value="Select Bandwidth" selected="selected">Select Bandwidth</option>
 								<option value="Under 5TB">Under 5TB</option>
@@ -745,6 +746,20 @@
 	    document.getElementsByTagName('script')[0].parentNode).appendChild(scr);
 	   if(oldonload){oldonload()}};
 	}());
+	</script>
+
+	<script id="_webengage_script_tag" type="text/javascript">
+	var _weq = _weq || {};
+	_weq['webengage.licenseCode'] = '58add003';
+	_weq['webengage.widgetVersion'] = "4.0";
+	(function(d){
+	var _we = d.createElement('script');
+	_we.type = 'text/javascript';
+	_we.async = true;
+	_we.src = (d.location.protocol == 'https:' ? "https://ssl.widgets.webengage.com" : "http://cdn.widgets.webengage.com") + "/js/widget/webengage-min-v-4.0.js";
+	var _sNode = d.getElementById('_webengage_script_tag');
+	_sNode.parentNode.insertBefore(_we, _sNode);
+	})(document);
 	</script>
 
 	<script src="//cdn.optimizely.com/js/140761619.js"></script>
